[gd_scene load_steps=6 format=3 uid="uid://c04xdunmgufdk"]

[ext_resource type="Script" path="res://Scenes/start_menu.gd" id="1_um66o"]
[ext_resource type="Texture2D" uid="uid://dybos6hmex0da" path="res://Assets/Sprites/Bg_full.png" id="2_uek72"]
[ext_resource type="PackedScene" uid="uid://bextw70xxibeh" path="res://Scenes/Settings/settings_menu.tscn" id="2_ujra2"]
[ext_resource type="PackedScene" uid="uid://emrqqbfmc3br" path="res://Scenes/credits-window.tscn" id="3_kbcyp"]
[ext_resource type="AudioStream" uid="uid://d26qveem5d0tv" path="res://Assets/Music/Time to business, guys.mp3" id="3_qkymn"]

[node name="start-menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_um66o")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uek72")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_right = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 70

[node name="game_title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 70
text = "Rhythm City"

[node name="start_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start"

[node name="settings_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="credits_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Credits"

[node name="quit_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="settings_menu" parent="." instance=ExtResource("2_ujra2")]
visible = false
layout_mode = 1

[node name="credits_window" parent="." instance=ExtResource("3_kbcyp")]
visible = false
layout_mode = 1

[node name="music_stream_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qkymn")
autoplay = true
bus = &"Music"
parameters/looping = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/credits_button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="exit_settings_menu" from="settings_menu" to="." method="_on_settings_menu_exit_settings_menu"]
[connection signal="exit_credits_window" from="credits_window" to="." method="_on_credits_window_exit_credits_window"]
